--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ header{
     color: rgb(194, 194, 194);
     font-family: 'Poppins', sans-serif;
     transition: 0.5s;
+    font-weight: 900;
 }
 .navegacao_item:hover{
     border-bottom: 0.5rem solid;
@@ -60,11 +61,11 @@ header{
     width: 100%;
     min-width: 900px;
     margin-top: 80px;
-   
 }
 
 .faca_parte{
     margin-bottom: 50px;
+    
 }
 h1{
     padding-top: 50px;
@@ -107,6 +108,14 @@ h1{
     flex-direction: column;
     align-items: center;
 }
+.imagem_podcast{
+    width: 100%;
+}
+.link_podcast{
+    margin-top: 20px;
+    width: 100%;
+    max-width: 600px;
+}
 #mic{
     font-size: 100px;
     width: 110px;
@@ -116,7 +125,10 @@ h1{
 }
 
 .voce_sabe{
-    margin: 14%;
+    margin: 4%;
+}
+.titulo_voce_sabe{
+    border-top: 2px dotted rgba(0, 0, 0, 0.103);
 }
 .div1_voce_sabe{
     display: flex;
@@ -124,6 +136,9 @@ h1{
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto 0 auto;  /*Centraliza a div*/
 }
 .divtest{
     margin-top: 80px;
@@ -152,6 +167,9 @@ h1{
     justify-content: space-around;
     flex-wrap: wrap;
     font-family: 'Roboto Condensed', sans-serif;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto 0 auto;  /*Centraliza a div*/
 }
 .conteudo2_voce_sabe{
     text-indent: 40px;
@@ -174,7 +192,7 @@ h1{
 /*--------Galeria slider responsiva--------*/
 
 .secgaleria{
-    margin: 0;
+    margin: 80px 0px 0px 0px ;
     padding: 0;
     height: 600px;
     display: flex;
@@ -205,13 +223,38 @@ h1{
     height: 100%;
     object-fit: cover; /*faz a imagem se reajustar ao tamanho da div pai*/
 } 
+.div_botao{
+    display: flex;
+    justify-content: center;
+    background-color: #3a3c3f;
+    padding-bottom: 20px;
+    transition: 0.5s all;
+}
+.botao_galeria{
+    font-size: 30px;
+    color: white;
+    padding: 30px 20px 40px 20px;
+    background-color: black;
+    border-radius: 10px;
+    font-family: 'Roboto Condensed', sans-serif;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.377);
+    transition: 0.3s all;
+}
+.botao_galeria:hover{
+    font-size: 35px;
+
+}
 /*--------fim Galeria slider responsiva--------*/
 
 .regras{
-    margin: 14%;
+    margin: 4%;
+    border-top: 2px dotted rgba(0, 0, 0, 0.103);
+    margin-top: 80px;
 }
 .div_regras{
-    margin-top: 70px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto 0 auto;  /*Centraliza a div*/
 }
 .conteudo_regra{
     margin-top: 20px;
@@ -219,8 +262,31 @@ h1{
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+.servidor{
+    padding-bottom: 40px;
+    padding: 4%;
+}
+.boxinfoserver{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto 0 auto;  /*Centraliza a div*/
+    overflow-wrap: break-word;
+    background-color: rgb(206, 206, 206);
+    border-radius: 20px;
+}
+.infoserver{
+    font-weight: 100;
+    text-indent: 40px;
+    font-size: 28px;
+    margin-top: 20px;
+    width: 100%;
+    text-align: justify;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding: 4%;
+}
+
 .lore{
-    margin: 14%;
+    margin: 4%;
 }
 .titulo_lore{
     margin-bottom: 60px;
@@ -249,3 +315,4 @@ h1{
 .divimagemrodape{
     text-align: center;
 }
+
