--- a/style.css
+++ b/style.css
@@ -12,12 +12,29 @@ html{
     scroll-behavior: smooth;    /*faz o scroll da navegaçao de pagina ser suave */
 }
 
+::-webkit-scrollbar{ /*definir largura da scrollbar (tem que ter esta tag no css para abrir o kit do scrollbar)*/
+    width: 10px;
+    height: 15px;
+}
+::-webkit-scrollbar-track{
+    background: rgba(160, 172, 172, 0.336);
+    border-radius: 0px;
+}
+::-webkit-scrollbar-thumb{
+    background: #3a3c3f;
+    border-radius: 30px;
+    width: 10px;
+    height: 10px;
+    border: 1px solid #4f5257;
+}
+
 body{
     background-color: white;
     font-size: 100%;
 }
 
 header{
+    z-index: 2;  /*zindex trabalha os items em Layers, 1 atras e mais alto acima*/
     width: 100%; 
     Position: fixed;  /* FAZ O HEADER SEMPRE APARECER NA TELA, MESMO ROLANDO PARA BAIXO */
     height: 80px;
@@ -26,7 +43,9 @@ header{
     align-items: center;
     justify-content: space-around;
     padding: 24px;
-    background-color:black;
+    background: rgba(117, 117, 117, 0.35);   /* efeito vidro*/
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );  /*efeito vidro*/
+    backdrop-filter: blur( 13.5px );         /*efeito vidro*/
 }
 
 .logo_header{
@@ -36,11 +55,11 @@ header{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 32px;
+    gap: 22px;
 }
 .navegacao_item{
-    font-size: 20px;
-    color: rgb(194, 194, 194);
+    font-size: min(4vw, 20px);
+    color: rgb(255, 255, 255);
     font-family: 'Poppins', sans-serif;
     transition: 0.5s;
     font-weight: 900;
@@ -60,7 +79,7 @@ header{
     overflow: hidden;
     width: 100%;
     min-width: 900px;
-    margin-top: 80px;
+    margin-top: 40px;
 }
 
 .faca_parte{
@@ -122,6 +141,26 @@ h1{
     height: 110px;
     color: black;
     margin-top: 20px;
+}
+.parceirospodcast{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 20px;
+}
+.parceirospodcast img{
+    width: 100px;
+}
+.parceirospodcast a{
+    font-size: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 800;
+}
+.parceiro{
+    display: flex;
+    flex-direction: column;
 }
 
 .voce_sabe{
@@ -194,7 +233,8 @@ h1{
 .secgaleria{
     margin: 80px 0px 0px 0px ;
     padding: 0;
-    height: 600px;
+    height: 90vw;
+    max-height: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -215,7 +255,7 @@ h1{
     flex: none;      /*tira as modificaçoes que o flex aplica na img*/
     width: 90%;     /*90% para mostrar 10% de outras imagens e indicar que tem mais que uma imagem só*/
     height: 100%;
-    max-height: 500px;
+    max-height: 700px;
     scroll-snap-align: center;  /*opçao de "start" para aparecer a imagem a partir do começo e nao no centro*/
 }
 #items-wrapper img{
@@ -273,6 +313,7 @@ h1{
     overflow-wrap: break-word;
     background-color: rgb(206, 206, 206);
     border-radius: 20px;
+    box-shadow: 0 2px 16px 0 rgba( 31, 38, 135, 0.37 );  /*efeito vidro*/
 }
 .infoserver{
     font-weight: 100;
@@ -297,6 +338,30 @@ h1{
     text-align: justify;
     font-family: 'Roboto Condensed', sans-serif;
 }
+.conteudo_lore2{
+    text-indent: 40px;
+    font-size: 24px;
+    text-align: justify;
+    font-family: 'Roboto Condensed', sans-serif;
+    display: none;
+}
+.divlermais{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.lermais{
+    border: none;
+    font-size: 20px;
+    color: white;
+    padding: 10px 20px 10px 20px;
+    background-color: black;
+    border-radius: 10px;
+    font-family: 'Roboto Condensed', sans-serif;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.377);
+    transition: 0.3s all;
+    cursor: pointer;
+}
 
 .rodape{
     background-color:black;
@@ -316,3 +381,12 @@ h1{
     text-align: center;
 }
 
+/*Animaçoes scroll*/
+
+.hidden{
+    opacity: 0;
+    transition: 1s;
+}
+.mostrar{
+    opacity: 1;
+}
